--- a/project/Project1/src/main/resources/templates/product.html
+++ b/project/Project1/src/main/resources/templates/product.html
@@ -60,7 +60,7 @@
          <td th:text="${product.category.name}">Larry</td>
           <td th:text="${product.price}">Larry</td>
 
-         <td><img src="" height="100px" width="100px"  th:src="@{${'/productImages/' + product.imgName}}"></td>
+         <td><img src="" height="100px" width="100px"  th:src="@{${'/images/' + product.imgName}}"></td>
 
      	   <td><a href="" th:href="@{/admin/product/delete/{id}(id=${product.product_id})}" class="btn btn-danger">Delete</a></td>
      	    
