--- a/project/Project1/src/main/resources/templates/addProduct.html
+++ b/project/Project1/src/main/resources/templates/addProduct.html
@@ -71,10 +71,10 @@
                 <p>Product Image</p>
                 <div class="custom-file">
                     <input type="file"  class="custom-file-input" name="productImage" accept="image/jpeg, image/png"  id="productImage"/>
-                    <label class="custom-file-label" for="productImage">Choose file</label>
+                    <label class="custom-file-label" for="images">Choose file</label>
                 </div>
                 <div class="form-group">
-                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/productImages/' + productDTO.imgName}}" style="margin-top: 20px" alt=" ">
+                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/images/' + productDTO.imgName}}" style="margin-top: 20px" alt=" ">
                 </div>
                 <input type="hidden" name="imgName" th:value="${productDTO.imgName}">
             <div class="col-sm-5">
@@ -115,3 +115,4 @@
     });
 </script>
 </body>
+</html>
