--- a/project/Project1/src/main/resources/templates/product.html
+++ b/project/Project1/src/main/resources/templates/product.html
@@ -3,18 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <title>Document</title>
+    <title>Admin Dashboard</title>
+    <style>
+        .navbar-brand img {
+            height: 40px;
+        }
+
+        .container-fluid {
+            margin-top: 20px;
+        }
+
+        .btn-primary {
+            margin-bottom: 20px;
+        }
+
+        .table thead {
+            background-color: #2874f0;
+            color: white;
+        }
+
+        .table th, .table td {
+            vertical-align: middle;
+        }
+
+        .table img {
+            max-height: 100px;
+            max-width: 100px;
+        }
+
+        .nav-link {
+            color: #007bff !important;
+        }
+
+        .nav-link:hover {
+            text-decoration: underline;
+        }
+
+        .btn-primary, .btn-danger, .btn-warning, .btn-secondary {
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+        }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+        }
+
+        .btn-warning:hover {
+            background-color: #e0a800;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
+
+        @media (max-width: 768px) {
+            .table-responsive {
+                overflow-x: auto;
+            }
+        }
+    </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
+            <img th:src="@{/images/logo.png}" src="../static/images/logo.png" alt="Logo"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,58 +83,50 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin}" href="#">Admin Home</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/logout}" href="#">Logout</a>
                 </li>
-
             </ul>
-
         </div>
     </div>
 </nav>
 <div class="container-fluid">
-
-    <a th:href="@{/admin/product/add}" style="margin: 20px 0" class="btn btn-primary">Add Product</a>
-    <table class="table">
-        <thead class="thead-light">
-        <tr>
-            <th scope="col">SN</th>
-            <th scope="col">Product Name</th>
-            <th scope="col">Category</th>
-            <th scope="col">Price</th>
-            
-            <th scope="col">Preview</th>
-            
-            <th scope="col">Delete</th>
-            <th scope="col">Update</th>
-        </tr>
-        </thead>
-        <tbody>
-
-        <tr th:each="product, iStat : ${products}">
-            <th scope="row" th:text="${iStat.index + 1}">1</th>
-            <td th:text="${product.name}">Larry</td>
-         <td th:text="${product.category.name}">Larry</td>
-          <td th:text="${product.price}">Larry</td>
-
-         <td><img src="" height="100px" width="100px"  th:src="@{${'/images/' + product.imgName}}"></td>
-
-     	   <td><a href="" th:href="@{/admin/product/delete/{id}(id=${product.product_id})}" class="btn btn-danger">Delete</a></td>
-     	    
-         <td><a href="" th:href="@{/admin/product/update/{id}(id=${product.product_id})}" class="btn btn-warning">Update</a></td>
-     	   
-        </tr>
-        </tbody>
-    </table>
-    
+    <a th:href="@{/admin/product/add}" class="btn btn-primary">Add Product</a>
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">SN</th>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Preview</th>
+                    <th scope="col">Delete</th>
+                    <th scope="col">Update</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="product, iStat : ${products}">
+                    <th scope="row" th:text="${iStat.index + 1}">1</th>
+                    <td th:text="${product.name}">Product Name</td>
+                    <td th:text="${product.category.name}">Category</td>
+                    <td th:text="${product.price}">Price</td>
+                    <td><img th:src="@{${'/images/' + product.imgName}}" alt="Product Image"></td>
+                    <td>
+                        <a th:href="@{/admin/product/delete/{id}(id=${product.product_id})}" class="btn btn-danger">Delete</a>
+                    </td>
+                    <td>
+                        <a th:href="@{/admin/product/update/{id}(id=${product.product_id})}" class="btn btn-warning">Update</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <a href="/admin" class="btn btn-secondary">Back</a>
 </div>
-
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <a href="/admin">Back</a>			
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
