--- a/project/Project1/src/main/resources/templates/shop.html
+++ b/project/Project1/src/main/resources/templates/shop.html
@@ -11,36 +11,103 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <title>Document</title>
-</head>
+<style>
+        body {
+            background-color: #f4f7f6;
+            font-family: 'Montserrat', sans-serif;
+        }
+        .navbar {
+            background-color: #232f3e;
+        }
+        .navbar .nav-link {
+            color: #ffffff !important;
+            font-weight: 600;
+        }
+        .navbar .nav-link:hover {
+            color: #ff9900 !important;
+        }
+        .jumbotron {
+            background-color: #146eb4;
+            color: #ffffff;
+            border-radius: 0 0 15px 15px;
+            padding: 3rem 2rem;
+        }
+        .card {
+            background-color: #ffffff;
+            border: none;
+            border-radius: 15px;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .card-title {
+            color: #232f3e;
+            font-weight: 600;
+            font-size: 1.25rem;
+        }
+        .card-text {
+            color: #232f3e;
+        }
+        .btn-primary {
+            background-color: #ff9900;
+            border: none;
+            transition: background-color 0.3s ease-in-out;
+        }
+        .btn-primary:hover {
+            background-color: #e68a00;
+        }
+        .container {
+            margin-bottom: 40px;
+        }
+        footer {
+            background-color: #232f3e;
+            color: #ffffff;
+            text-align: center;
+            padding: 1rem 0;
+            border-radius: 15px 15px 0 0;
+        }
+        .footer-links a {
+            color: #ff9900;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
+    </style></head>
 <body>
-	
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-    <div class="container-fluid">
-     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		     <ul class="navbar-nav mr-auto"></ul>
-		     
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">Dream Shoppe</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}" href="#">Home</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/shop}" href="#">Shop</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">Login</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">Logout</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}">0</span>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/cart}" href="#">Cart <span class="badge badge-light" th:text="${cartCount}">0</span></a>
                 </li>
             </ul>
-
+            <span class="navbar-text">Welcome, Guest!</span>
         </div>
     </div>
 </nav>
@@ -49,7 +116,7 @@
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col-sm-3">
-            <h4 >Categories</h4>
+            <h4>Categories</h4>
             <ul class="list-group">
                 <a th:href="@{/shop}"><li class="list-group-item">All Products</li></a>
                 <a href="" th:each="category, iStat : ${categories}"
@@ -61,16 +128,14 @@
         <div class="col-sm-9">
             <div class="card" style="margin-top: 20px" th:each="product : ${products}">
                 <div class="row no-gutters">
-                        <div class="col-sm-5 d-flex justify-content-center">
-							
-							
+                    <div class="col-sm-5 d-flex justify-content-center">
                         <img class="" height="150px" width="150px" th:src="@{${'/images/' + product.imgName}}" th:alt="${product.name}">
                     </div>
                     <div class="col-sm-7 d-flex justify-content-center">
                         <div class="card-body">
                             <h5 class="card-title" th:text="${product.name}"></h5>
                             <h4>₹ <span th:text="${product.price}"></span></h4>
-                           <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.product_id})}" class="btn btn-primary">View Product</a>
+                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.product_id})}" class="btn btn-primary">View Product</a>
                         </div>
                     </div>
                 </div>
@@ -78,9 +143,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
